--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "E:\\Program Files (x86)\\Python36_64\\python.exe"
+    "python.pythonPath": "C:\\Users\\Dioooooooor\\AppData\\Local\\Programs\\Python\\Python36\\python.exe"
 }
